--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </center>
       </div>
       <div class="copy_right_footer">
-        Developed by - WhitehatJr Team
+        Developed by - Shad Alam
       </div>
 <script src="main.js"></script>
   </body>
